--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #d0f0c0; /* Pastel green */
+  background-color: #d0f0c0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,64 +11,63 @@ body {
   font-family: "Tauri", sans-serif;
   font-weight: 400;
   font-style: normal;
-  overflow-x: hidden; /* Prevent horizontal scrollbar */
+  overflow-x: hidden;
 }
 
-/* Assuming your container div has a class named 'converter' */
 .converter {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; /* Align vertically */
+  justify-content: center;
   padding: 20px;
   border-radius: 5px;
   background-color: #fff;
   width: 70%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  margin: 0 auto; /* Add this for horizontal centering */
+  margin: 0 auto;
 }
 
 .converter input[type="tel"] {
   width: 250px;
   padding: 15px;
   margin: 5px;
-  border: 1px solid #ddd; /* Light border */
+  border: 1px solid #ddd;
   border-radius: 5px;
   font-size: 16px;
 }
 
 .converter button {
-  background-color: #0084ff; /* Vibrant blue */
+  background-color: #0084ff;
   color: #fff;
   border: none;
   padding: 12px 20px;
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
-  transition: background-color 0.3s ease; /* Smooth hover effect */
+  transition: background-color 0.3s ease;
   margin-top: 5px;
 }
 
 .converter button:hover {
-  background-color: #006acc; /* Slightly darker on hover */
+  background-color: #006acc;
 }
 
 .converter a {
-  background-color: #25d366; /* Vibrant green background */
+  background-color: #25d366;
   color: white;
   padding: 12px 20px;
-  text-decoration: none; /* Remove underline */
-  display: inline-block; /* Allows for padding and margin control */
+  text-decoration: none;
+  display: inline-block;
   border-radius: 5px;
-  transition: background-color 0.3s ease; /* Smooth hover effect */
+  transition: background-color 0.3s ease;
 }
 
 .converter a:hover {
-  background-color: #21b65b; /* Slightly darker on hover */
+  background-color: #21b65b;
 }
 
 h1 {
-  margin-bottom: 20px; /* Space between title and converter */
+  margin-bottom: 20px;
   text-align: center;
 }
 
@@ -108,16 +107,16 @@ h1 {
     width: 100%;
     max-width: 250px;
     padding: 12px 20px;
-    text-align: center; /* Center align text */
+    text-align: center;
     text-decoration: none;
-    display: block; /* Change display to block */
+    display: block;
     border-radius: 5px;
     transition: background-color 0.3s ease;
     box-sizing: border-box;
   }
 
   .converter .buttons {
-    width: 80%; /* Ensure full width */
-    margin: 0 auto; /* Center buttons */
+    width: 80%;
+    margin: 0 auto;
   }
 }
