--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 body {
-  background-color: #d0f0c0;
+  background-color: #000000;
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   margin: 0;
+}
+
+h1 {
+  margin-bottom: 20px;
+  text-align: center;
+  color: white;
 }
 
 * {
@@ -28,54 +34,52 @@ body {
 }
 
 .converter input[type="tel"] {
-  width: 250px;
+  width: 390px;
   padding: 15px;
-  margin: 5px;
+  margin: 5px 0px 5px 0px;
   border: 1px solid #ddd;
   border-radius: 5px;
   font-size: 16px;
 }
 
 .converter button {
-  background-color: #0084ff;
+  background-color: #000000;
   color: #fff;
-  border: none;
+  border: 2px solid black;
   padding: 12px 20px;
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
+  width: 100%;
   transition: background-color 0.3s ease;
+  margin-bottom: 0px;
+}
+
+.genBtn {
   margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 .converter button:hover {
-  background-color: #006acc;
+  background-color: #ffffff;
+  color: #000000;
+  border-color: black;
 }
 
 .converter a {
-  background-color: #25d366;
+  background-color: #000000;
   color: white;
   padding: 12px 20px;
   text-decoration: none;
   display: inline-block;
   border-radius: 5px;
+  border: 2px solid black;
   transition: background-color 0.3s ease;
 }
 
 .converter a:hover {
-  background-color: #21b65b;
-}
-
-h1 {
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-.notice {
-  color: #25d366;
-}
-.error-notice {
-  color: red;
+  background-color: #ffffff;
+  color: #000000;
 }
 
 .converter a + button {
@@ -86,37 +90,81 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  margin-top: 5px;
 }
+
+.converter .buttons a {
+  width: 40%;
+}
+
+.converter .buttons span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.converter .buttons button {
+  width: 50%;
+}
+
+.floating-notice {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #ffffff; /* Success color */
+  color: rgb(0, 0, 0);
+  padding: 15px;
+  border-radius: 5px;
+  z-index: 1000; /* Ensure it's on top */
+  opacity: 0; /* Initially hide the notice */
+}
+
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateX(-50%) translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(-50%) translateY(0);
+  }
+}
+
+@keyframes slideOut {
+  0% {
+    opacity: 1;
+    transform: translateX(-50%) translateY(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(-50%) translateY(100%);
+  }
+}
+
+.animate-in {
+  animation: slideIn 0.5s ease forwards; /* Animation for slide-in */
+}
+
+.animate-out {
+  animation: slideOut 0.5s ease forwards; /* Animation for slide-out */
+}
+
 @media only screen and (max-width: 768px) {
   .converter {
     width: 90%;
     padding: 10px;
   }
 
-  .converter input[type="tel"],
+  .converter input[type="tel"] {
+    width: 280px;
+  }
   .converter button {
     width: 100%;
   }
 
-  h1 {
-    font-size: 24px;
-  }
-
-  .converter button,
-  .converter a {
-    width: 100%;
-    max-width: 250px;
-    padding: 12px 20px;
+  .floating-notice {
     text-align: center;
-    text-decoration: none;
-    display: block;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    box-sizing: border-box;
-  }
-
-  .converter .buttons {
-    width: 80%;
-    margin: 0 auto;
   }
 }
