--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ h1 {
   font-family: "Tauri", sans-serif;
   font-weight: 400;
   font-style: normal;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .converter {
@@ -69,7 +69,7 @@ h1 {
 .converter a {
   background-color: #000000;
   color: white;
-  padding: 12px 20px;
+  padding: 10px 20px;
   text-decoration: none;
   display: inline-block;
   border-radius: 5px;
@@ -123,6 +123,7 @@ h1 {
 
 @keyframes slideIn {
   0% {
+    display: block;
     opacity: 0;
     transform: translateX(-50%) translateY(100%);
   }
@@ -140,6 +141,7 @@ h1 {
   100% {
     opacity: 0;
     transform: translateX(-50%) translateY(100%);
+    display: none;
   }
 }
 
