--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@ h1 {
   font-family: "Tauri", sans-serif;
   font-weight: 400;
   font-style: normal;
-  overflow: hidden;
+  /* overflow-y: hidden; */
+  /* overflow-x: hidden; */
 }
 
 .converter {
