--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ h1 {
   font-family: "Tauri", sans-serif;
   font-weight: 400;
   font-style: normal;
-  /* overflow-y: hidden; */
+  overflow-y: hidden;
   /* overflow-x: hidden; */
 }
 
