--- a/src/App.css
+++ b/src/App.css
@@ -159,15 +159,26 @@ h1 {
 
 @media only screen and (max-width: 768px) {
   .converter {
-    width: 90%;
+    width: 50%;
+    min-width: 300px;
+    max-width: 300px;
     padding: 10px;
   }
 
+  h1 {
+    font-size: 20px;
+  }
+
   .converter input[type="tel"] {
-    width: 280px;
+    width: 225px;
   }
   .converter button {
     width: 100%;
+  }
+
+  .converter a {
+    width: 100%;
+    padding: 12px 10px;
   }
 
   .floating-notice {
