--- a/src/App.css
+++ b/src/App.css
@@ -30,15 +30,23 @@ h1 {
   padding: 20px;
   border-radius: 5px;
   background-color: #fff;
-  width: 525px;
-  max-width: 525px;
-  min-width: 525px;
+  width: 520px;
+  max-width: 520px;
+  min-width: 520px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   margin: 0 auto;
 }
 
+.hello {
+  font-family: "Courier New", Courier, "Lucida Sans Typewriter",
+    "Lucida Typewriter", monospace;
+  font-weight: 400;
+  font-style: normal;
+  color: white;
+}
+
 .converter input[type="tel"] {
-  width: 450px;
+  width: 445px;
   padding: 15px;
   margin: 5px 0px 5px 0px;
   border: 1px solid #ddd;
@@ -114,25 +122,27 @@ h1 {
 
 .floating-notice {
   position: fixed;
-  bottom: 20px;
+  bottom: -100px;
   left: 50%;
-  transform: translateX(-50%);
+  /* transform: translateX(-100%); */
   background-color: #ffffff; /* Success color */
   color: rgb(0, 0, 0);
   padding: 15px;
   border-radius: 5px;
   z-index: 1000; /* Ensure it's on top */
   opacity: 0; /* Initially hide the notice */
+  /* display: none; */
 }
 
 @keyframes slideIn {
   0% {
-    display: block;
     opacity: 0;
     transform: translateX(-50%) translateY(100%);
   }
   100% {
     opacity: 1;
+    display: block;
+    bottom: 20px;
     transform: translateX(-50%) translateY(0);
   }
 }
@@ -159,18 +169,19 @@ h1 {
 
 @media only screen and (max-width: 768px) {
   .converter {
-    width: 50%;
-    min-width: 300px;
-    max-width: 300px;
+    width: 295px;
+    min-width: 295px;
+    max-width: 295px;
     padding: 10px;
   }
 
   h1 {
     font-size: 20px;
+    height: 50px;
   }
 
   .converter input[type="tel"] {
-    width: 225px;
+    width: 220px;
   }
   .converter button {
     width: 100%;
