--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,7 @@ h1 {
 }
 
 * {
-  font-family: Courier New, Courier, Lucida Sans Typewriter, Lucida Typewriter,
-    monospace;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   font-style: normal;
   /* overflow-y: hidden; */
